# ChangeLog for dev-python/pytaglib
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> pytaglib-1.0.3.ebuild:
  dev-python/pytaglib: Updated ebuild headers to match new $Id$ line

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/pytaglib: Add github to remote-id in metadata.xml

*pytaglib-1.0.3 (28 Apr 2015)

  28 Apr 2015; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +pytaglib-1.0.3.ebuild:
  New ebuild for pytaglib