@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pytaglib
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+  13 Feb 2016; Johann Schmitz <ercpe@gentoo.org> pytaglib-1.0.3.ebuild:
+  dev-python/pytaglib: Added missing setuptools
 
   16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> pytaglib-1.0.3.ebuild:
   dev-python/pytaglib: Updated ebuild headers to match new $Id$ line
